<resources>
    <string name="app_name">애니메이션 월드컵</string>
    <string name="game_start">게임시작</string>
    <string name="add_picture">참전하기</string>
    <string name="hint_topic_title">제목</string>
    <string name="submit">제출</string>
    <string name="topic_description">설명을 입력하세요</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut ipsum a orci lacinia condimentum. Duis non mi consequat, egestas ipsum ut, tincidunt velit. Ut ac placerat elit, eu gravida nunc. Aliquam efficitur fermentum purus, ut tempus ligula commodo eget. Integer tempus ligula eu elit hendrerit egestas. Curabitur lacinia quam a tortor efficitur volutpat. Aliquam pulvinar sapien massa. Vestibulum venenatis velit scelerisque nunc accumsan porttitor. Nulla facilisi. Praesent eleifend malesuada aliquet. Nullam mattis massa purus, et elementum mi pharetra nec. Aenean dignissim vitae elit ac fermentum. Pellentesque sit amet lacus scelerisque, posuere tellus quis, tempus lorem.Sed et nisl volutpat risus commodo volutpat. Suspendisse lobortis, est non convallis sollicitudin, est orci bibendum odio, sed ornare leo sapien a ipsum. Phasellus viverra, nunc vel rhoncus facilisis, felis velit sagittis ex, sit amet gravida nulla tellus in lacus. In hac habitasse platea dictumst. Aenean euismod venenatis iaculis. Fusce libero diam, bibendum eu turpis ac, rhoncus posuere lectus. Etiam luctus mauris mi, eu dignissim nibh pellentesque sit amet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.Praesent venenatis venenatis nisi, non vehicula magna pulvinar vel. Maecenas a dolor erat. Vestibulum placerat justo sit amet ultrices mollis. Ut suscipit eget urna quis fringilla. Duis dictum odio ipsum, non interdum enim placerat at. Suspendisse vel mauris a nisi pharetra dapibus vitae ac est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id orci ac justo aliquet bibendum et in risus. Fusce consequat augue at mollis tincidunt. Aliquam ultrices justo lobortis nunc imperdiet, mattis feugiat purus pellentesque.Nunc consequat neque mauris, ut venenatis augue cursus pulvinar. Donec ut hendrerit velit. Nunc tincidunt odio nec metus blandit condimentum. Praesent at lorem a dui porta aliquam. Sed finibus nibh ut ante fringilla, at tincidunt urna faucibus. Sed euismod tincidunt mauris ut pellentesque. Mauris ac elit tortor. Cras feugiat odio id neque ultrices sagittis. Maecenas erat urna, maximus eget iaculis sit amet, ultrices et nibh. Morbi eget dictum mauris, a mattis enim. Vestibulum auctor urna lorem, vel varius mauris maximus sit amet. In dignissim ornare accumsan. Proin mollis mauris orci, sed laoreet metus consectetur vitae. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;Aliquam euismod orci sapien, a suscipit arcu fermentum eu. Nunc leo tortor, faucibus tincidunt nulla in, efficitur vulputate velit. Vestibulum feugiat ante id nunc cursus consectetur. Quisque ac vestibulum tortor. Cras auctor orci quis sem vestibulum ultricies. Praesent volutpat sollicitudin orci, sit amet lacinia dolor iaculis sit amet. Pellentesque eget nunc imperdiet, vehicula erat a, ullamcorper dui. Duis ut leo tristique eros venenatis faucibus sed porttitor mauris. Sed congue facilisis commodo. Aenean pellentesque, lacus a gravida iaculis, elit ex fringilla neque, quis vestibulum sapien orci vel turpis. Praesent ultrices elit non sollicitudin porttitor. Aenean lobortis mattis est in aliquet. Suspendisse vitae tortor eget ex tincidunt pharetra. In in pulvinar leo. Donec semper quam nec erat volutpat, sed facilisis sem sollicitudin. Suspendisse potenti.</string>
    <string name="hint_title">제목을 입력하세요</string>
    <string name="change_nickname">변경할 닉네임을 입력하세요</string>
    <string name="change_picturename">변경할 사진의 이름을 입력하세요</string>
    <string name="hint_description">설명을 입력하세요</string>
    <string name="warn_name">중복된 이름입니다.</string>
    <string name="warn_unnamed_picture">이름이 정해지지 않은 사진이 있습니다.</string>
    <string name="warn_not_enough_picture">사진을 두개이상 등록하주세요.</string>
    <string name="warn_error">오류가 발생했습니다. 다시 시도해 주세요.</string>
    <string name="win">우승</string>
    <!--내 백엔드서버의 웹 클라이언트 아이디. requestIdToken 이나 requestServerAuthCode 시에 필요하다.-->
    <string name="default_web_client_id">111890520747-07dnc8pb1jg7a170p98tqh6drof24d4m.apps.googleusercontent.com</string>
    <string name="nickname">닉네임</string>
    <string name="comment">덧글</string>
    <string name="alert_add_topic">스타포인트를 100점 차감하게 됩니다. 계속하시겠습니까?</string>
    <string name="warn_not_enough_point">포인트가 부족합니다.</string>
    <string name="signin">로그인</string>
    <string name="signout">로그아웃</string>
    <string name="show_result_picture">다른 결과 보기</string>
    <string name="show_result_comment">댓글보기</string>
    <string name="how_was_worldcup">이 월드컵은 어땠나요?</string>
    <string name="of_user">의 유저가</string>
    <string name="choose_same_as_you">당신과 같은 선택을 했습니다.</string>
    <string name="tooltip_topic_income">월드컵을 완료한 유저의 수 x</string>
    <string name="tooltip_picture_income">우승횟수 x</string>
    <string name="not_enough_picture_in_worldcup">월드컵에 사진이 부족합니다.</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="subscribe">구독하기</string>
    <string name="report">신고하기</string>
    <string name="best_comment">베스트 댓글</string>
    <string name="need_signin">로그인이 필요합니다.</string>
    <string name="year_before">년 전</string>
    <string name="day_before">일 전</string>
    <string name="hour_before">시간 전</string>
    <string name="minute_before">분 전</string>
    <string name="just_before">방금</string>
    <string name="revenue">수익</string>
    <string name="Home">홈</string>
    <string name="worldcup">전체 월드컵</string>
    <string name="my_worldcup">내 월드컵</string>
    <string name="my_picture">내 사진</string>
    <string name="people">명</string>
    <string name="place">등</string>
    <string name="from">소속</string>
    <string name="win_cnt">우승횟수</string>
    <string name="warn_add_picture">음란물 등록 시, 임의로 삭제될 수 있고 형사처벌의 대상이 됩니다.</string>
    <string name="info_add_picture">다른 사람의 월드컵에 사진을 추가할 수 있습니다.</string>
    <string name="report_completed">신고되었습니다.</string>
    <string name="dispath_from_gallery">갤러리에서 가져오기</string>
    <string name="replace_to_basic_image">기본 이미지로 대체</string>
    <string name="login_google">구글 계정으로 로그인</string>
    <string name="empty_picture">표시할 사진이 없습니다.</string>
    <string name="empty_worldcup">표시할 월드컵이 없습니다.</string>
    <string name="number_of_worldcup">월드컵 수</string>
    <string name="number_of_picture">사진 수</string>
    <string name="tier">티어</string>
    <string name="here">여기</string>
    <string name="personal_info_url">https://blackmanta.tistory.com/27</string>
    <string name="personal_information_notification">로그인시, 개인정보수집에 동의한 것으로 간주합니다. 개인정보 처리방침은 여기에서 확인할 수 있습니다.</string>
</resources>