<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_title"
        android:textSize="20sp"
        android:textColor="?android:attr/textColorPrimary"/>

    <TextView
        android:id="@+id/tv_title_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warn_name"
        android:visibility="invisible"
        android:layout_marginBottom="10dp"
        android:textColor="@color/warning"/>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:maxLines="1"
        android:background="@drawable/edittext_border"/>

    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>