<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_topic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:textAlignment="center"
            android:maxLength="150"
            android:textSize="20sp"
            />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/tv_topic_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1200"
            android:text="@string/lorem" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/btn_game_start"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_start"/>

        <Button
            android:id="@+id/btn_add_picture"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_picture"/>
    </LinearLayout>

</LinearLayout>