<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddTopicActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/btn_add_Picture"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="?attr/colorPrimary"
            android:background="@drawable/ic_baseline_add_photo_alternate_24" />



        <TextView
            android:id="@+id/btn_submit"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="?attr/colorPrimary"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_add_Picture"
            android:layout_marginTop="5dp"
            android:hint="@string/hint_topic_title"
            android:maxLength="25"
            android:backgroundTint="?android:attr/textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_title"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="?attr/colorSecondaryVariant"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">


            <EditText
                android:id="@+id/et_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/topic_description"
                android:maxLength="77"
                android:backgroundTint="?android:attr/textColorPrimary"
                android:textSize="15sp" />


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_warning"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warn_add_picture"
            style="@style/TextAppearance.AppCompat"
            android:layout_below="@id/cv_content"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_warning"
            android:layout_marginTop="15dp"
            android:scrollbars="none"
            />


    </RelativeLayout>


</ScrollView>